[package]
name = "yarf-sys"
version = "0.0.1"
authors = ["Ryo Okubo <syucream1031@gmail.com>"]
license = "MIT"
description = "A yet another rust-fuse; sys package"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
libc = "0.2.46"

[[bin]]
name = "hello_sys"
path = "examples/hello_sys.rs"

[[bin]]
name = "null_sys"
path = "examples/null_sys.rs"
