[package]
name = "yarf-sys"
version = "0.0.2"
authors = ["Ryo Okubo <syucream1031@gmail.com>"]
license = "MIT"
description = "An yet another rust-fuse, focuses on just only libfuse highlevel API binding ; sys crate"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
libc = "0.2.46"

[[bin]]
name = "hello_sys"
path = "examples/hello_sys.rs"

[[bin]]
name = "null_sys"
path = "examples/null_sys.rs"
