[package]
name = "yarf"
version = "0.0.2"
authors = ["Ryo Okubo <syucream1031@gmail.com>"]
license = "MIT"
description = "An yet another rust-fuse, focuses on just only libfuse highlevel API binding"

[dependencies]
libc = "0.2.46"
yarf-sys = { path = "../yarf-sys", version = "0.0.1" }

[[bin]]
name = "hello"
path = "examples/hello.rs"
